--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "author": "guptamo <mo@mohitgupta.ca>",
     "license": "MIT",
     "devDependencies": {
+        "babel-core": "^6.24.0",
+        "babel-loader": "^6.4.0",
+        "babel-preset-es2015": "^6.24.0",
+        "babel-preset-latest": "^6.24.0",
         "webpack": "^2.2.1"
     },
     "scripts": {
