--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
         "babel-core": "^6.24.0",
         "babel-loader": "^6.4.0",
         "babel-preset-es2015": "^6.24.0",
+        "babel-preset-react": "^6.23.0",
         "css-loader": "^0.27.3",
         "extract-text-webpack-plugin": "^2.1.0",
-        "webpack": "^2.2.1"
+        "webpack": "^2.2.1",
+        "webpack-livereload-plugin": "^0.10.0"
     },
     "scripts": {
-        "start": "webpack && open index.html"
+        "start": "webpack --watch && open static/index.html"
+    },
+    "dependencies": {
+        "react": "^15.4.2",
+        "react-dom": "^15.4.2"
     }
 }
