--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "webpack-livereload-plugin": "^0.10.0"
     },
     "scripts": {
-        "start": "webpack --watch && open static/index.html"
+        "start": "webpack-dev-server",
+        "build": "webpack -p"
     },
     "dependencies": {
         "react": "^15.4.2",
