--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "author": "guptamo <mo@mohitgupta.ca>",
     "license": "MIT",
     "devDependencies": {
+        "autoprefixer": "^6.7.7",
         "babel-core": "^6.24.0",
         "babel-loader": "^6.4.0",
         "babel-preset-es2015": "^6.24.0",
