--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "babel-loader": "^6.4.0",
         "babel-preset-es2015": "^6.24.0",
         "babel-preset-react": "^6.23.0",
+        "babili-webpack-plugin": "^0.0.11",
         "css-loader": "^0.27.3",
         "extract-text-webpack-plugin": "^2.1.0",
         "html-webpack-plugin": "^2.28.0",
