--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
         "babel-loader": "^6.4.0",
         "babel-preset-es2015": "^6.24.0",
         "babel-preset-react": "^6.23.0",
+        "babel-register": "^6.24.0",
         "babili-webpack-plugin": "^0.0.11",
+        "chai": "^3.5.0",
         "css-loader": "^0.27.3",
+        "enzyme": "^2.7.1",
         "extract-text-webpack-plugin": "^2.1.0",
         "html-webpack-plugin": "^2.28.0",
+        "jsdom": "^9.12.0",
+        "mocha": "^3.2.0",
         "postcss-loader": "^1.3.3",
+        "react-addons-test-utils": "^15.4.2",
         "style-loader": "^0.15.0",
         "webpack": "^2.2.1",
         "webpack-dev-server": "^2.4.2",
@@ -24,7 +30,8 @@
     },
     "scripts": {
         "start": "webpack-dev-server --env development",
-        "build": "webpack --env production"
+        "build": "webpack --env production",
+        "test": "mocha --watch test/.setup.js test/**/*_test.js"
     },
     "dependencies": {
         "react": "^15.4.2",
