--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "babel-register": "^6.24.0",
         "babili-webpack-plugin": "^0.0.11",
         "chai": "^3.5.0",
+        "compression-webpack-plugin": "^0.3.2",
         "css-loader": "^0.27.3",
         "enzyme": "^2.7.1",
         "extract-text-webpack-plugin": "^2.1.0",
