--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "react-addons-test-utils": "^15.4.2",
         "style-loader": "^0.15.0",
         "webpack": "^2.2.1",
+        "webpack-browser-plugin": "^1.0.20",
         "webpack-dev-server": "^2.4.2",
         "webpack-merge": "^4.1.0"
     },
