--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "css-loader": "^0.27.3",
         "enzyme": "^2.7.1",
         "extract-text-webpack-plugin": "^2.1.0",
+        "file-loader": "^0.11.0",
         "html-webpack-plugin": "^2.28.0",
         "jsdom": "^9.12.0",
         "mocha": "^3.2.0",
